--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>MyWEbsite</title>
+    </head>
     <body>
         <h2>What Can JavaScipt Do?</h2>
         <p id="demo">JavaScript can change HTML content.</p>
@@ -10,4 +13,5 @@
          <img id="myImage" src="pic_bulbon.gif" style="width:100px">
          <button onclick="document.getElementById('myImage').src='pic_bulbon.gif'">change thePicture2</button>
     </body>
+
 </html>
